compiler/testData/diagnostics/tests/inference/kt12399.fir.kt
fun foo(a: Any) {
    foo(<!UNRESOLVED_REFERENCE!>{ index -> } {  }<!>)
}